[package]
name = "skiplist"
version = "0.1.0"
authors = ["Euclidr <euclidry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "skiplist_benchmark"
harness = false

[[bench]]
name = "skipset_benchmark"
harness = false